Fixed an error on README.md Fixed quotes.css causing strange behavior when resizing. Fixed the first year of a quoted not showing the quote count.

--- a/css/quotes.css
+++ b/css/quotes.css
@@ -4,7 +4,7 @@
 	margin-bottom: 0px;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 800px) {
 	#navbar-years-group {
 		float: left;
 		margin-right: 10px;
